[package]
name = "git2_credentials"
version = "0.3.1"
authors = ["David Bernard <david.bernard.31@gmail.com>"]
edition = "2018"
description = "Provide credential function to used with git2::RemoteCallbacks.credentials"
readme = "README.md"
license = "Apache-2.0"
keywords = ["git"]
repository = "https://github.com/davidB/git2_credentials"
homepage = "https://github.com/davidB/git2_credentials"
exclude = ["/azure-pipelines.yml", "/docs/**", "/scripts", ".gitignore", "/tests/**"]

[dependencies]
dirs = "2.0"
git2 = "0.10"
failure = "0.1.5"
dialoguer = { version = "0.4.0", optional = true }

[dev-dependencies]
tempfile = "3.1.0"

[features]
default = ["ui4dialoguer"]
ui4dialoguer = ["dialoguer"]
