[package]
name = "git2_credentials"
version = "0.7.0"
authors = ["David Bernard <david.bernard.31@gmail.com>"]
edition = "2018"
description = "Provide credential function to used with git2::RemoteCallbacks.credentials"
readme = "README.md"
license = "Apache-2.0"
keywords = ["git"]
repository = "https://github.com/davidB/git2_credentials"
homepage = "https://github.com/davidB/git2_credentials"
exclude = ["/.github", ".dependabot/", "/docs/**", "/scripts", ".gitignore", "/tests/**"]

[dependencies]
dirs = "^3.0"
git2 = { version = "^0.13", default-features = false }
dialoguer = { version = "^0.7", optional = true }
pest = "^2.1"
pest_derive = "^2.1"
regex = "^1.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempfile = "3.1.0"
git2 = { version = "^0.13" }

[features]
default = ["ui4dialoguer"]
ui4dialoguer = ["dialoguer"]
