[package]
name = "git2_credentials"
version = "0.9.2-dev"
authors = ["David Bernard <david.bernard.31@gmail.com>"]
edition = "2018"
description = "Provide credential function to used with git2::RemoteCallbacks.credentials"
readme = "README.md"
license = "Apache-2.0"
keywords = ["git"]
repository = "https://github.com/davidB/git2_credentials"
homepage = "https://github.com/davidB/git2_credentials"
exclude = [
    "/.github",
    ".dependabot/",
    "/docs/**",
    "/scripts",
    ".gitignore",
    "/tests/**",
]

[dependencies]
dirs = "^4.0"
git2 = { version = "^0.15", default-features = false }
dialoguer = { version = "^0.10", optional = true }
pest = "^2.3"
pest_derive = "^2.3"
regex = "^1.6"

[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3.3"
git2 = { version = "^0.15" }

[features]
default = ["ui4dialoguer"]
ui4dialoguer = ["dialoguer"]
